zero-schema-macros/tests/ui/fail/70_optional_zero_valid_scalar_array.stderr
error[E0271]: type mismatch resolving `<ZeroValidScalar as WireTypeSupport>::ZeroState == ZeroInvalid`
  --> tests/ui/fail/70_optional_zero_valid_scalar_array.rs:11:1
   |
11 | #[zero]
   | ^^^^^^^ expected `ZeroInvalid`, found `ZeroValid`
   |
   = help: see issue #48214
   = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<ZeroValidScalar as WireTypeSupport>::ZeroState == ZeroInvalid`
  --> tests/ui/fail/70_optional_zero_valid_scalar_array.rs:11:1
   |
11 | #[zero]
   | ^^^^^^^ expected `ZeroInvalid`, found `ZeroValid`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
